--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -1,197 +1,197 @@
-@import '../Styles/Placeholder';
-@import '../Styles/Mixin';
+@import "../Styles/Variable";
+@import "../Styles/Placeholder";
 
 .landscape {
-  background-image: url(../Assets/BG.jpg);
-  background-size: cover;
-  background-position: 50% 50%;
+  background: url(../Assets/BG.jpg) 50% 50% / cover;
   height: 100vh;
 
   .layer {
-    background-color: rgba(0, 0, 0, 0.45);
+    background-color: $layer;
     height: 100vh;
     @extend %center;
   }
 
   .content {
     text-align: center;
-    color: #ffffff;
+    color: $white;
 
     img {
       width: 149px;
-      @include marginBottom(1.25rem)
+      margin: 0 0 1.0625rem 0;
     }
 
-    h2 {
-      @include marginBottom(1.25rem);
-      @include text(capitalize);
-
-   @include font(3rem,700,Roboto);
-      
+    h1 {
+      margin: 0 0 1.0625rem 0;
+      text-transform: capitalize;
+      font: 700 3rem Roboto;
     }
 
     h6 {
-      @include marginBottom(1.25rem);
-      @include text(uppercase);
-      @include font(1.125rem,600,Roboto);    }
+      margin: 0 0 1.0625rem 0;
+      text-transform: uppercase;
+      font: 600 1.125rem Roboto;
+    }
 
     .details {
       @extend %center;
     }
 
     .icons {
-      margin-right: 0.25rem;
+      margin: 0 0.25rem 0 0;
       font-size: 1.125rem;
     }
 
     p {
-      @include marginBottom(3.125rem);
+      margin: 0 0 3.125rem 0;
       line-height: 1.6875rem;
-      @include text(capitalize);
-      @include font(1.125rem,400,OpenSans);
+      text-transform: capitalize;
+      font: 400 1.125rem OpenSans;
     }
 
     a {
       padding: 1.25rem 2.875rem;
-      border: 2px solid #ffffff;
+      border: 0.125rem solid $white;
       border-radius: 0.625rem;
-      @include text(uppercase);
-      @include font(0.875rem,700,OpenSans);
+      text-transform: uppercase;
+      letter-spacing: 0.0625rem;
+      font: 700 0.875rem OpenSans;
       transition: all 0.5s;
-      color: #ffffff;
-    }
+      color: $white;
 
-    a:hover {
-      background-color: #ffffff;
-      color: #000000;
+      &:hover {
+        background-color: $white;
+        color: $black;
+      }
     }
   }
-
 }
 
+.dark {
+  .landscape {
+    .layer {
+      background-color: $darkLayer;
+    }
 
+    .content {
+      color: $darkText;
 
+      a {
+        color: $darkText;
 
-.bg-chief {
-  background-color: #a79f94;
-  height: 3600%;
-  padding: 6rem;
-
-  .chief {
-    background-image: url(../Assets/Chief.jpg);
-    background-size: cover;
-    background-position: 50% 50%;
-    height: 385px;
+        &:hover {
+          background-color: $darkText;
+          color: $black;
+        }
+      }
+    }
   }
-  // .chief {
-  //   height: 100%;
-  // }
+}
+
+.bg-cooker {
+  background-color: $mainBg;
+  height: 3600%;
+  padding: 6rem 0 21.375rem;
 
   .reset {
-    padding: 0;
+    padding: 0 0 0 0;
+
+    .chief {
+      background: url(../Assets/Chief1.jpg) 50% 50% / cover;
+      height: 100%;
+      min-height: 400px;
+    }
   }
 
-  // .reset .chief {
-  //   height: 100%;
-  // }
-
   .bg-white {
-    background-color: #ffffff;
+    background-color: $white;
     padding: 0;
-  
+
     .img-caption {
       padding: 1.875rem;
-    
+      text-align: left;
+
       h2 {
-        padding-bottom: 2.25rem;
-        @include font(3rem,400,Roboto);
-        span {
-          @include text(capitalize);
-        }
+        padding: 0 0 2.25rem;
+        font: 400 3rem Roboto;
+        color: $black;
+
       }
 
       p {
-        padding-bottom: 5.3125rem;
-        @include font(1.125rem,400,OpenSans);
-        color: #581e1e;
-        span {
-          @include text(capitalize);
-        }
+        padding: 0 0 5.3125rem;
+        font: 400 1.125rem OpenSans;
+        line-height: 1.8;
+        color: $burgundy;
+
       }
 
       .iconPhone {
-        color: #b9c1cc;
+        color: $black;
         font-size: 1.875rem;
       }
 
       a {
         @extend %alignCenter;
-        @include font(1.875rem,700,OpenSans);
-        color: #111111;
+        font: 700 1.875rem OpenSans;
+        transition: all 0.5s;
+        width: fit-content;
+        color: $black;
+
+        &:hover {
+          color: saddlebrown;
+        }
+      }
+    }
+  }
+}
+
+.dark {
+  .bg-cooker {
+    background-color: $darkBg;
+
+    .bg-white {
+      background-color: $darkWallPaper;
+    }
+  }
+}
+
+.bg-breads {
+  margin: 0 0 6rem 0;
+
+  .row {
+    margin: -18.125rem 0 1.6875rem 0;
+
+    figure {
+      height: 403px;
+      margin: 0 0 2.125rem 0;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
       }
 
-      a:hover {
-        color: #b9c1cc;
+      @media screen and (min-width: 340px) and (max-width: 767px) {
+        height: 527px;
+      }
+    }
+
+    .figure-position img {
+      object-position: 75%;
+    }
+
+    .text-caption {
+      h3 {
+        padding: 0 0 1.25rem;
+        text-transform: capitalize;
+        font: 700 2.25rem Roboto;
+      }
+
+      p {
+        font: 400 1.125rem OpenSans;
       }
     }
   }
-
-
 }
-
-.bg-breads{
-
-    background-color: #a79f94;
-  height: 358px;    
-
-
-.eee {
-      padding-top: 4.0625rem;
-
-      height: 100px;
-}
-
-  .sss {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
-
-
-  .img-caption {
-    // width: 390px;
-height: 403px;
-// width: 363px;
-margin-bottom: 2.125rem;
-
-img {
-  height: 100%;
-  width: 100%;
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-}
-}
-
-  h3 {
-    padding-bottom: 20px;
-    @include font(2.25rem,700,Roboto);  }
-
-  p {
-    @include font(1.125rem,400,OpenSans);
-  }
-
-  .text-caption {
-    h3 {
-      @include text(capitalize);
-    }
-
-    p span {
-      @include text(capitalize);
-    }
-
-
-}
-
-}
-
-
-
